fix: add validations for numeric, boolean, and range constraints in STS trajectory processing
- Enhance trajectory validations by introducing checks for numeric, boolean, and range constraints.
- Remove redundant unit tests for `readConstraintsMatrix`.
- Add support for detailed error messages related to missing or invalid columns in STS files.
- Update test cases to align with new validation logic.