@@ -10,17 +10,21 @@ import org.apache.poi.ss.usermodel.Workbook;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.io.TempDir;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.*;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.catchThrowable;
 
+
+@ExtendWith(MockitoExtension.class)
 class StStorageConstraintsFileProcessorServiceImplTest {
 
     private StStorageConstraintsFileProcessorServiceImpl service;
@@ -76,10 +80,10 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             }
         }
 
-        List<StConstraintsParameterEntity> result = service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", List.of("zone1", "z1"));
+        List<StConstraintsParameterEntity> result = service.processConstraintsParametersAnHoursFile(filePath, "zone1", List.of("zone1", "z1"),"VE", "cluster1", "traj.xlsx", 1);
 
         assertThat(result).hasSize(1);
-        StConstraintsParameterEntity p = result.get(0);
+        StConstraintsParameterEntity p = result.getFirst();
         assertThat(p.getName()).isEqualTo("param1");
         assertThat(p.getZone()).isEqualTo("zone1");
         assertThat(p.getCluster()).isEqualTo("cluster1");
@@ -88,7 +92,7 @@ class StStorageConstraintsFileProcessorServiceImplTest {
         assertThat(p.getEnabled()).isTrue();
         assertThat(p.getHours()).hasSize(1);
 
-        StConstraintsHoursEntity h = p.getHours().get(0);
+        StConstraintsHoursEntity h = p.getHours().getFirst();
         assertThat(h.getOccurrence()).isEqualTo(1);
         assertThat(h.getStartHour()).isEqualTo(10);
         assertThat(h.getEndHour()).isEqualTo(20);
@@ -105,9 +109,10 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             }
         }
 
-        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", List.of("zone1", "z1")))
+        List<String> zones = List.of("zone1", "z1");
+        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", zones, "PSP", "c1", "t.xlsx", 1))
                 .isInstanceOf(BusinessException.class)
-                .hasMessageContaining("Missing parameters or hours data in STS Additional Constraints file");
+                .hasMessageContaining("Missing parameters or hours data in STS {0} Additional Constraints file");
     }
 
     @Test
@@ -124,22 +129,109 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             headerP.createCell(5).setCellValue("enabled");
 
             Row rowP = paramSheet.createRow(1);
-            rowP.createCell(0).setCellValue("p1");
-            rowP.createCell(1).setCellValue("zone1");
+            rowP.createCell(1).setCellValue("OTHERS");
             rowP.createCell(2).setCellValue("c1");
-            rowP.createCell(5).setCellValue(true);
 
-            workbook.createSheet("hours"); // Empty hours sheet
+            Sheet hourSheet = workbook.createSheet("hours"); // Empty hours sheet
+            Row headerH = hourSheet.createRow(0);
+            headerH.createCell(1).setCellValue("zone");
+            headerH.createCell(2).setCellValue("cluster");
+            Row rowH = hourSheet.createRow(1);
+            rowH.createCell(1).setCellValue("OTHERS");
+            rowH.createCell(2).setCellValue("c1");
 
             try (FileOutputStream fos = new FileOutputStream(filePath.toFile())) {
                 workbook.write(fos);
             }
         }
 
-        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", List.of("zone1")))
-                .isInstanceOf(BusinessException.class)
-                .hasMessageContaining("No data found in {0} in STS Additional Constraint");
+        List<String> zones = List.of("zone1");
+        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", zones, "Battery", "c1", "t.xlsx", 1))
+                .isInstanceOf(BusinessException.class);
 
+    }
+
+    @Test
+    void shouldThrowWhenRequiredColumnsMissingInParameters() throws IOException {
+        Path filePath = tempDir.resolve("missing_cols.xlsx");
+        try (Workbook workbook = new XSSFWorkbook()) {
+            Sheet paramSheet = workbook.createSheet("parameters");
+            Row headerP = paramSheet.createRow(0);
+            headerP.createCell(0).setCellValue("name");
+            headerP.createCell(1).setCellValue("zone");
+            // cluster missing
+
+            Row dataRow = paramSheet.createRow(1);
+            dataRow.createCell(0).setCellValue("p1");
+            dataRow.createCell(1).setCellValue("OTHERS");
+            dataRow.createCell(2).setCellValue("c1");
+
+            workbook.createSheet("hours");
+            Sheet hourSheet = workbook.getSheet("hours");
+            Row hourHeader = hourSheet.createRow(0);
+            hourHeader.createCell(1).setCellValue("zone");
+            hourHeader.createCell(2).setCellValue("cluster");
+            Row hourData = hourSheet.createRow(1);
+            hourData.createCell(1).setCellValue("OTHERS");
+            hourData.createCell(2).setCellValue("c1");
+
+            try (FileOutputStream fos = new FileOutputStream(filePath.toFile())) {
+                workbook.write(fos);
+            }
+        }
+
+        List<String> zones = List.of("zone1");
+        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", zones, "Battery", "c1", "t.xlsx", 1))
+                .isInstanceOf(BusinessException.class)
+                .satisfies(e -> {
+                    BusinessException be = (BusinessException) e;
+                    String expected = java.text.MessageFormat.format("Missing columns {0} in {1} tab in STS {2} Additional Constraint file", "cluster, variable, operator, enabled", "parameters", "Battery");
+                    assertThat(be.getMessage()).isEqualTo("Missing columns {0} in {1} tab in STS {2} Additional Constraint file");
+                    assertThat(be.getErrorMessageArguments()).containsExactly("cluster, variable, operator, enabled", "parameters", "Battery");
+                    String formatted = java.text.MessageFormat.format(be.getMessage(), be.getErrorMessageArguments().toArray());
+                    assertThat(formatted).isEqualTo(expected);
+                });
+    }
+
+    @Test
+    void shouldThrowWhenRequiredColumnsMissingInHours() throws IOException {
+        Path filePath = tempDir.resolve("missing_cols_hours.xlsx");
+        try (Workbook workbook = new XSSFWorkbook()) {
+            Sheet paramSheet = workbook.createSheet("parameters");
+            Row headerP = paramSheet.createRow(0);
+            headerP.createCell(0).setCellValue("name");
+            headerP.createCell(1).setCellValue("zone");
+            headerP.createCell(2).setCellValue("cluster");
+            headerP.createCell(3).setCellValue("variable");
+            headerP.createCell(4).setCellValue("operator");
+            headerP.createCell(5).setCellValue("enabled");
+
+            Row rowP = paramSheet.createRow(1);
+            rowP.createCell(1).setCellValue("OTHERS");
+            rowP.createCell(2).setCellValue("c1");
+
+            Sheet hourSheet = workbook.createSheet("hours");
+            Row headerH = hourSheet.createRow(0);
+            headerH.createCell(1).setCellValue("zone");
+            headerH.createCell(2).setCellValue("cluster");
+
+            Row rowH = hourSheet.createRow(1);
+            rowH.createCell(1).setCellValue("OTHERS");
+            rowH.createCell(2).setCellValue("c1");
+
+            try (FileOutputStream fos = new FileOutputStream(filePath.toFile())) {
+                workbook.write(fos);
+            }
+        }
+
+        List<String> zones = List.of("z1");
+        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", zones, "PSP", "c1", "t.xlsx", 1))
+                .isInstanceOf(BusinessException.class)
+                .satisfies(e -> {
+                    BusinessException be = (BusinessException) e;
+                    assertThat(be.getMessage()).isEqualTo("Missing columns {0} in {1} tab in STS {2} Additional Constraint file");
+                    assertThat(be.getErrorMessageArguments()).containsExactly("name, occurrence, start, end", "hours", "PSP");
+                });
     }
 
     @Test
@@ -171,7 +263,7 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             headerH.createCell(5).setCellValue("end");
 
             Row rowH = hourSheet.createRow(1);
-            rowH.createCell(0).setCellValue("unknown_p");
+            rowH.createCell(0).setCellValue("daily_zone1");
             rowH.createCell(1).setCellValue("zone1");
             rowH.createCell(2).setCellValue("c1");
             rowH.createCell(3).setCellValue(1);
@@ -183,31 +275,45 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             }
         }
 
-        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", List.of("zone1")))
+        List<String> zones = List.of("zone1");
+        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", zones, "EV", "c1", "t.xlsx", 1))
                 .isInstanceOf(BusinessException.class)
-                .hasMessageContaining("Parameter not found: name={0}, zone={1}, cluster{2}");
+                .hasMessageContaining("Parameter: name={0}, zone={1}, cluster{2}, not found in hours sheet");
     }
 
     @Test
     void shouldThrowWhenNoDataInParametersSheet() throws IOException {
         Path filePath = tempDir.resolve("orphaned_hour.xlsx");
         try (Workbook workbook = new XSSFWorkbook()) {
-            workbook.createSheet("parameters");
+            Sheet paramSheet = workbook.createSheet("parameters");
+            Row headerP = paramSheet.createRow(0);
+            headerP.createCell(0).setCellValue("name");
+            headerP.createCell(1).setCellValue("zone");
+            headerP.createCell(2).setCellValue("cluster");
+            headerP.createCell(3).setCellValue("variable");
+            headerP.createCell(4).setCellValue("operator");
+            headerP.createCell(5).setCellValue("enabled");
+
             Sheet hourSheet = workbook.createSheet("hours");
-            hourSheet.createRow(0);
-            Row row = hourSheet.createRow(1);
-            row.createCell(0).setCellValue("ghost");
-            row.createCell(1).setCellValue("zone");
-            row.createCell(2).setCellValue("cluster");
+            Row headerH = hourSheet.createRow(0);
+            headerH.createCell(0).setCellValue("name");
+            headerH.createCell(1).setCellValue("zone");
+            headerH.createCell(2).setCellValue("cluster");
+            headerH.createCell(3).setCellValue("occurrence");
+            headerH.createCell(4).setCellValue("start");
+            headerH.createCell(5).setCellValue("end");
+
 
             try (FileOutputStream fos = new FileOutputStream(filePath.toFile())) {
                 workbook.write(fos);
             }
         }
 
-        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", List.of("zone1")))
+        List<String> zones = List.of("zone1");
+        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", zones, "PSP", "c1", "t.xlsx", 1))
                 .isInstanceOf(BusinessException.class)
-                .hasMessageContaining("No data found in {0} in STS Additional Constraint");
+                .hasMessageContaining("No data found in {0} tab in STS {1} Additional Constraint file");
+
 
     }
 
@@ -280,7 +386,7 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             }
         }
 
-        List<StConstraintsParameterEntity> result = service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", List.of("zone1", "z1"));
+        List<StConstraintsParameterEntity> result = service.processConstraintsParametersAnHoursFile(filePath, "z1", List.of("zone1", "z1"), "Battery", "c1", "t.xlsx", 1);
         assertThat(result).hasSize(4);
         assertThat(result.get(0).getEnabled()).isTrue();
         assertThat(result.get(1).getEnabled()).isTrue();
@@ -337,12 +443,12 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             }
         }
 
-        List<StConstraintsParameterEntity> result = service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", List.of("zone1", "z1"));
+        List<StConstraintsParameterEntity> result = service.processConstraintsParametersAnHoursFile(filePath, "z1", List.of("zone1", "z1"), "EV", "c1", "t.xlsx", 1);
         assertThat(result).hasSize(1);
-        List<StConstraintsHoursEntity> hours = result.get(0).getHours();
+        List<StConstraintsHoursEntity> hours = result.getFirst().getHours();
         assertThat(hours).hasSize(2);
 
-        assertThat(hours.get(0).getOccurrence()).isEqualTo(5);
+        assertThat(hours.getFirst().getOccurrence()).isEqualTo(5);
         assertThat(hours.get(0).getStartHour()).isEqualTo(10);
         assertThat(hours.get(0).getEndHour()).isEqualTo(20);
 
@@ -364,33 +470,36 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             headerP.createCell(4).setCellValue("operator");
             headerP.createCell(5).setCellValue("enabled");
 
-            Row rowP = paramSheet.createRow(1);
-            rowP.createCell(0).setCellValue("p1");
-            rowP.createCell(1).setCellValue("z1");
-            rowP.createCell(2).setCellValue("c1");
-            rowP.createCell(5).setCellValue(true);
+            Row pr = paramSheet.createRow(1);
+            pr.createCell(0).setCellValue("p1");
+            pr.createCell(1).setCellValue("z1");
+            pr.createCell(2).setCellValue("c1");
+            pr.createCell(3).setCellValue("variable");
+            pr.createCell(4).setCellValue("operator");
+            pr.createCell(5).setCellValue(true);
 
             Sheet hourSheet = workbook.createSheet("hours");
-            Row hourHeader = hourSheet.createRow(0);
-            hourHeader.createCell(0).setCellValue("name");
-            hourHeader.createCell(1).setCellValue("zone");
-            hourHeader.createCell(2).setCellValue("cluster");
-            hourHeader.createCell(3).setCellValue("occurrence");
-            hourHeader.createCell(4).setCellValue("start");
-            hourHeader.createCell(5).setCellValue("end");
+            Row headerH = hourSheet.createRow(0);
+            headerH.createCell(0).setCellValue("name");
+            headerH.createCell(1).setCellValue("zone");
+            headerH.createCell(2).setCellValue("cluster");
+            headerH.createCell(3).setCellValue("occurrence");
+            headerH.createCell(4).setCellValue("start");
+            headerH.createCell(5).setCellValue("end");
 
-            Row rowH = hourSheet.createRow(1);
-            rowH.createCell(0).setCellValue("p1");
-            rowH.createCell(1).setCellValue("z1");
-            rowH.createCell(2).setCellValue("c1");
-            // Cell 3 (occurrence) is missing (null)
+            Row hr = hourSheet.createRow(1);
+            hr.createCell(0).setCellValue("p1");
+            hr.createCell(1).setCellValue("z1");
+            hr.createCell(2).setCellValue("c1");
+            // occurrence (index 3) is missing/null
 
             try (FileOutputStream fos = new FileOutputStream(filePath.toFile())) {
                 workbook.write(fos);
             }
         }
 
-        BusinessException ex = (BusinessException) catchThrowable(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", List.of("z1")));
+        List<String> zones = List.of("z1");
+        BusinessException ex = (BusinessException) catchThrowable(() -> service.processConstraintsParametersAnHoursFile(filePath, "z1", zones,"PSP", "c1", "t.xlsx",1));
         assertThat(ex.getMessage()).isEqualTo("Values for node {0} / cluster {1} are not numeric in STS Additional Constraint {2}");
         assertThat(ex.getErrorMessageArguments()).containsExactly("z1", "c1", "occurrence");
     }
@@ -408,41 +517,42 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             headerP.createCell(4).setCellValue("operator");
             headerP.createCell(5).setCellValue("enabled");
 
-            Row rowP = paramSheet.createRow(1);
-            rowP.createCell(0).setCellValue("p1");
-            rowP.createCell(1).setCellValue("z1");
-            rowP.createCell(2).setCellValue("c1");
-            rowP.createCell(3).setCellValue("var");
-            rowP.createCell(4).setCellValue("=");
-            rowP.createCell(5).setCellValue(true);
+            Row pr = paramSheet.createRow(1);
+            pr.createCell(0).setCellValue("p1");
+            pr.createCell(1).setCellValue("z1");
+            pr.createCell(2).setCellValue("c1");
+            pr.createCell(3).setCellValue("variable");
+            pr.createCell(4).setCellValue("operator");
+            pr.createCell(5).setCellValue(true);
 
             Sheet hourSheet = workbook.createSheet("hours");
-            Row hourHeader = hourSheet.createRow(0);
-            hourHeader.createCell(0).setCellValue("name");
-            hourHeader.createCell(1).setCellValue("zone");
-            hourHeader.createCell(2).setCellValue("cluster");
-            hourHeader.createCell(3).setCellValue("occurrence");
-            hourHeader.createCell(4).setCellValue("start");
-            hourHeader.createCell(5).setCellValue("end");
+            Row headerH = hourSheet.createRow(0);
+            headerH.createCell(0).setCellValue("name");
+            headerH.createCell(1).setCellValue("zone");
+            headerH.createCell(2).setCellValue("cluster");
+            headerH.createCell(3).setCellValue("occurrence");
+            headerH.createCell(4).setCellValue("start");
+            headerH.createCell(5).setCellValue("end");
 
-            Row rowH = hourSheet.createRow(1);
-            rowH.createCell(0).setCellValue("p1");
-            rowH.createCell(1).setCellValue("z1");
-            rowH.createCell(2).setCellValue("c1");
-            rowH.createCell(3).setCellValue("not_a_number");
+            Row hr = hourSheet.createRow(1);
+            hr.createCell(0).setCellValue("p1");
+            hr.createCell(1).setCellValue("z1");
+            hr.createCell(2).setCellValue("c1");
+            hr.createCell(3).setCellValue("not-a-number");
 
             try (FileOutputStream fos = new FileOutputStream(filePath.toFile())) {
                 workbook.write(fos);
             }
         }
 
-        BusinessException ex = (BusinessException) catchThrowable(() -> service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", List.of("z1")));
+        List<String> zones = List.of("z1");
+        BusinessException ex = (BusinessException) catchThrowable(() -> service.processConstraintsParametersAnHoursFile(filePath, "z1", zones, "Battery", "c1", "t.xlsx", 1));
         assertThat(ex.getMessage()).isEqualTo("Values for node {0} / cluster {1} are not numeric in STS Additional Constraint {2}");
         assertThat(ex.getErrorMessageArguments()).containsExactly("z1", "c1", "occurrence");
     }
 
     @Test
-    void shouldKeepFirstParameterWhenDuplicateKeyExists() throws IOException {
+    void shouldThrowWhenDuplicateKeyExists() throws IOException {
         Path filePath = tempDir.resolve("duplicate_key.xlsx");
         try (Workbook workbook = new XSSFWorkbook()) {
             Sheet paramSheet = workbook.createSheet("parameters");
@@ -458,17 +568,13 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             first.createCell(0).setCellValue("p1");
             first.createCell(1).setCellValue("z1");
             first.createCell(2).setCellValue("c1");
-            first.createCell(3).setCellValue("v1");
-            first.createCell(4).setCellValue("=");
             first.createCell(5).setCellValue(true);
 
-            Row duplicate = paramSheet.createRow(2);
-            duplicate.createCell(0).setCellValue("p1");
-            duplicate.createCell(1).setCellValue("z1");
-            duplicate.createCell(2).setCellValue("c1");
-            duplicate.createCell(3).setCellValue("v2");
-            duplicate.createCell(4).setCellValue("<");
-            duplicate.createCell(5).setCellValue(false);
+            Row second = paramSheet.createRow(2);
+            second.createCell(0).setCellValue("p1");
+            second.createCell(1).setCellValue("z1");
+            second.createCell(2).setCellValue("c1");
+            second.createCell(5).setCellValue(true);
 
             Sheet hourSheet = workbook.createSheet("hours");
             Row headerH = hourSheet.createRow(0);
@@ -484,20 +590,21 @@ class StStorageConstraintsFileProcessorServiceImplTest {
             rowH.createCell(1).setCellValue("z1");
             rowH.createCell(2).setCellValue("c1");
             rowH.createCell(3).setCellValue(1);
-            rowH.createCell(4).setCellValue(2);
-            rowH.createCell(5).setCellValue(3);
+            rowH.createCell(4).setCellValue(0);
+            rowH.createCell(5).setCellValue(1);
 
             try (FileOutputStream fos = new FileOutputStream(filePath.toFile())) {
                 workbook.write(fos);
             }
         }
 
-        List<StConstraintsParameterEntity> result = service.processConstraintsParametersAnHoursFile(filePath, "OTHERS", List.of("z1"));
-
-        assertThat(result).hasSize(2);
-        assertThat(result.get(0).getVariable()).isEqualTo("v1");
-        assertThat(result.get(0).getHours()).hasSize(1);
-        assertThat(result.get(1).getVariable()).isEqualTo("v2");
-        assertThat(result.get(1).getHours()).isEmpty();
+        List<String> zones = List.of("z1");
+        assertThatThrownBy(() -> service.processConstraintsParametersAnHoursFile(filePath, "z1", zones, "PSP", "c1", "t.xlsx", 1))
+                .isInstanceOf(BusinessException.class)
+                .satisfies(e -> {
+                    BusinessException be = (BusinessException) e;
+                    assertThat(be.getMessage()).isEqualTo("Selected area/cluster {0}/{1} not present in the 'zone' column of {2} tab in STS {3} Additional Constraint file");
+                    assertThat(be.getErrorMessageArguments()).containsExactly("z1", "c1", "parameters", "PSP");
+                });
     }
 }
